--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "test": "echo \"Write tests! -> https://gatsby.dev/unit-testing\" && exit 1"
   },
   "dependencies": {
+    "bootstrap": "^5.3.0-alpha3",
     "gatsby": "^5.8.1",
     "react": "^18.2.0",
     "react-dom": "^18.2.0"
